--- a/project/medical-project/pom.xml
+++ b/project/medical-project/pom.xml
@@ -37,6 +37,12 @@
 			<version>1.3.4.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-freemarker</artifactId>
+			<version>1.4.1.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
