--- a/common/pom.xml
+++ b/common/pom.xml
@@ -135,6 +135,42 @@
 			<classifier>jdk15</classifier>
 		</dependency>
 
+		<!--私有Maven-->
+		<dependency>
+			<groupId>DHST</groupId>
+			<artifactId>dahantc-http-json-api</artifactId>
+			<version>1.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>DHST</groupId>
+			<artifactId>dahantc-http-json-api-resource</artifactId>
+			<version>1.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>4.4.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20140107</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-core</artifactId>
+			<version>1.2.3</version>
+		</dependency>
 	</dependencies>
 
 </project>
