--- a/common/pom.xml
+++ b/common/pom.xml
@@ -171,6 +171,12 @@
 			<artifactId>shiro-core</artifactId>
 			<version>1.2.3</version>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
 	</dependencies>
 
 </project>
