--- a/config/src/main/resources/conf/constant-config.properties
+++ b/config/src/main/resources/conf/constant-config.properties
@@ -1,10 +1,25 @@
 
-loginTokenPeriod = 2592000
+loginTokenPeriod=2592000
 
-practitionerDomain = 101.201.209.61
+practitionerDomain=101.201.209.61
 
-elderVersion = 1.0.1
+elderVersion=1.0.1
 
-practitionerVersion = 1.0.1
+practitionerVersion=1.0.1
 
-hospitalVersion = 1.0.1
+hospitalVersion=1.0.1
+
+easemob.org_name=1156170425115453
+easemob.app_name=laoyoupractitioner
+easemob.clientID=YXA6sEf7ADnpEeeL3W144MlC-Q
+easemob.clientSecret=YXA60ZXFcB-UZ0TdWx3etIcqOo4ySAw
+
+NEWREACH_WEB_URL=https://182.92.80.103/
+easemob.message.url=http://182.92.111.7:80
+
+aliyun.accesskey=LTAI4sTNSdF4XRFm
+aliyun.secret=GIl082Z6QhZc1m7a5sm4ehFAWeLAKQ
+oss.host=http://oss-cn-beijing.aliyuncs.com
+opensearch.host=http://opensearch-cn-beijing.aliyuncs.com
+
+page.pageSize = -1
