--- a/project/elder-project/src/main/resources/application.properties
+++ b/project/elder-project/src/main/resources/application.properties
@@ -1,5 +1,2 @@
-spring.application.name= community-project
+spring.application.name= elder-project
 spring.cloud.config.uri= http://localhost:8888
-
-
-
