--- a/config/pom.xml
+++ b/config/pom.xml
@@ -7,14 +7,14 @@
 		<groupId>com.wisdom</groupId>
 		<artifactId>wisdom</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../../pom.xml</relativePath>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<groupId>com.wisdom</groupId>
 	<artifactId>config</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>user-service</name>
+	<name>config</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
