--- a/project/elder-project/pom.xml
+++ b/project/elder-project/pom.xml
@@ -12,11 +12,11 @@
 	</parent>
 
 	<groupId>com.wisdom</groupId>
-	<artifactId>community-project</artifactId>
+	<artifactId>elder-project</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
 	<packaging>jar</packaging>
-	<name>community-project</name>
+	<name>elder-project</name>
 
 	<dependencies>
 
