--- a/registry-center/pom.xml
+++ b/registry-center/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>com.wisdom</groupId>
 		<artifactId>wisdom</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../../pom.xml</relativePath>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<groupId>com.wisdom</groupId>
