--- a/config/src/main/resources/project/elder-project.properties
+++ b/config/src/main/resources/project/elder-project.properties
@@ -28,6 +28,10 @@ zuul.routes.api-wechat.service-id:wechat-service
 
 zuul.routes.api-notification.path=/notification/**
 zuul.routes.api-notification.service-id:notification-service
+
+zuul.host.socket-timeout-millis=60000
+zuul.host.connect-timeout-millis=60000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
 #############
 ##zuul配置###
 #############
@@ -51,3 +55,6 @@ spring.freemarker.template-loader-path=classpath:/templates/
 spring.data.mongodb.host=101.201.209.61
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=laoyou
+
+#热部署生效
+spring.devtools.restart.enabled= true
