--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
 				<version>${spring.cloud.version}</version>
 			</dependency>
 
+			<dependency>
+				<!--Spring 官方提供的热部署插件 -->
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-devtools</artifactId>
+				<optional>true</optional>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
@@ -99,6 +106,14 @@
 				<configuration>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<fork>true</fork>
 				</configuration>
 			</plugin>
 		</plugins>
