--- a/project/elder-project/pom.xml
+++ b/project/elder-project/pom.xml
@@ -42,8 +42,18 @@
 			<artifactId>spring-boot-starter-freemarker</artifactId>
 			<version>1.4.1.RELEASE</version>
 		</dependency>
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.flexjson</groupId>
+            <artifactId>flexjson</artifactId>
+            <version>2.1</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 </project>
 
