--- a/config/src/main/resources/service/community-service.properties
+++ b/config/src/main/resources/service/community-service.properties
@@ -7,7 +7,7 @@ server.port=9051
 mybatis.type-aliases-package=com.wisdom.community.mapper
 mybatis.mapper-locations=classpath:mapper/*.xml
 
-spring.datasource.url= jdbc:mysql://101.201.209.61:3306/laoyou?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.url= jdbc:mysql://101.201.209.61:3306/wisdom?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username= root
 spring.datasource.password= root123456
 spring.datasource.driver-class-name= com.mysql.jdbc.Driver
