--- a/config/src/main/resources/conf/constant-config.properties
+++ b/config/src/main/resources/conf/constant-config.properties
@@ -23,3 +23,6 @@ oss.host=http://oss-cn-beijing.aliyuncs.com
 opensearch.host=http://opensearch-cn-beijing.aliyuncs.com
 
 page.pageSize = -1
+
+APPID=wx60103ad76ffa6715
+APPSECRET=c2ec678a54ae0a407d8ac143552a4c34
