--- a/common/pom.xml
+++ b/common/pom.xml
@@ -184,6 +184,12 @@
 			<version>2.6.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>21.0</version>
+		</dependency>
+
     </dependencies>
 
 </project>
