--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 		<module>service/community-service</module>
 		<module>service/health-service</module>
 		<module>service/core-service</module>
+		<module>service/tcc-coordinator-service</module>
 
 		<module>project/elder-project</module>
 
