--- a/config/src/main/resources/project/elder-project.properties
+++ b/config/src/main/resources/project/elder-project.properties
@@ -14,8 +14,8 @@ zuul.routes.api-activity.service-id:community-service
 zuul.routes.api-health.path=/health/**
 zuul.routes.api-health.service-id:health-service
 
-zuul.routes.api-notification.path=/home/**
-zuul.routes.api-notification.service-id:home-service
+zuul.routes.api-notification.path=/living/**
+zuul.routes.api-notification.service-id:living-service
 
 zuul.routes.api-wechat.path=/wechat/**
 zuul.routes.api-wechat.service-id:wechat-service
