--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 		<module>service/core-service</module>
 		<module>service/tcc-coordinator-service</module>
 		<module>service/translation-service</module>
+		<module>service/living-service</module>
 
 		<module>project/elder-project</module>
 		<module>project/titan-project</module>
