wechat-service 问题修复

--- a/config/src/main/resources/service/living-service.properties
+++ b/config/src/main/resources/service/living-service.properties
@@ -1,6 +1,6 @@
 server.context-path=/
 
-eureka.client.serviceUrl.defaultZone=http://localhost:9000/eureka/
+eureka.client.serviceUrl.defahttp://localhost:9000/eureka/ultZone=http://localhost:9000/eureka/
 server.port=9054
 
 # mybatis \u914D\u7F6E
