--- a/config/src/main/resources/service/wechat-service.properties
+++ b/config/src/main/resources/service/wechat-service.properties
@@ -3,11 +3,12 @@ server.context-path=/
 eureka.client.serviceUrl.defaultZone=http://localhost:9000/eureka/
 server.port=9056
 
+
 # mybatis \u914D\u7F6E
 mybatis.type-aliases-package=com.wisdom.wechat.mapper
 mybatis.mapper-locations=classpath:mapper/*.xml
 
-spring.datasource.url= jdbc:mysql://101.201.209.61:3306/wisdom?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.url= jdbc:mysql://101.201.209.61:3306/laoyou?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username= root
 spring.datasource.password= root123456
 spring.datasource.driver-class-name= com.mysql.jdbc.Driver
