--- a/config/src/main/resources/service/living-service.properties
+++ b/config/src/main/resources/service/living-service.properties
@@ -1,10 +1,10 @@
 server.context-path=/
 
-eureka.client.serviceUrl.defahttp://localhost:9000/eureka/ultZone=http://localhost:9000/eureka/
-server.port=9054
+eureka.client.serviceUrl.defaultZone= http://localhost:9000/eureka/
+server.port=9059
 
 # mybatis \u914D\u7F6E
-mybatis.type-aliases-package= com.wisdom.health.mapper
+mybatis.type-aliases-package= com.wisdom.living.mapper
 mybatis.mapper-locations= classpath:mapper/*.xml
 
 spring.datasource.url= jdbc:mysql://101.201.209.61:3306/laoyou?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
