--- a/config/src/main/resources/service/wechat-service.properties
+++ b/config/src/main/resources/service/wechat-service.properties
@@ -19,9 +19,18 @@ spring.datasource.druid.test-on-borrow= true
 spring.datasource.druid.stat-view-servlet.allow= true
 
 #redis
-spring.redis.host-name=101.201.209.61
+#spring.redis.host-name=101.201.209.61
+#spring.redis.port=6379
+#spring.redis.password=laoyou
+#spring.redis.pool.max-active=300
+#spring.redis.pool.max-wait=-1
+#spring.redis.pool.max-idle=50
+#spring.redis.pool.min-idle=8
+#spring.redis.timeout=2000
+
+spring.redis.host-name=123.57.49.178
 spring.redis.port=6379
-spring.redis.password=laoyou
+spring.redis.password=HljkLaoyou
 spring.redis.pool.max-active=300
 spring.redis.pool.max-wait=-1
 spring.redis.pool.max-idle=50
