--- a/service/living-service/pom.xml
+++ b/service/living-service/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>core-service</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.wisdom</groupId>
+            <artifactId>wechat-service</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
