--- a/config/src/main/resources/project/elder-project.properties
+++ b/config/src/main/resources/project/elder-project.properties
@@ -8,8 +8,8 @@ server.port= 80
 zuul.routes.api-user.path=/core/**
 zuul.routes.api-user.service-id:core-service
 
-zuul.routes.api-activity.path=/community/**
-zuul.routes.api-activity.service-id:community-service
+zuul.routes.api-community.path=/community/**
+zuul.routes.api-community.service-id:community-service
 
 zuul.routes.api-health.path=/health/**
 zuul.routes.api-health.service-id:health-service
