--- a/config/src/main/resources/project/elder-project.properties
+++ b/config/src/main/resources/project/elder-project.properties
@@ -23,6 +23,8 @@ zuul.routes.api-wechat.service-id:wechat-service
 zuul.host.socket-timeout-millis=60000
 zuul.host.connect-timeout-millis=60000
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+zuul.ribbon.ReadTimeout=60000
+zuul.ribbon.ConnectTimeout=60000
 #############
 ##zuul配置###
 #############
