--- a/config/src/main/resources/conf/constant-config.properties
+++ b/config/src/main/resources/conf/constant-config.properties
@@ -10,9 +10,9 @@ practitionerVersion=1.0.1
 hospitalVersion=1.0.1
 
 easemob.org_name=1156170425115453
-easemob.app_name=laoyoupractitioner
-easemob.clientID=YXA6sEf7ADnpEeeL3W144MlC-Q
-easemob.clientSecret=YXA60ZXFcB-UZ0TdWx3etIcqOo4ySAw
+easemob.app_name=laoyouelder
+easemob.clientID=YXA6G9WQ8E_cEeeerT2x6bNpiw
+easemob.clientSecret=YXA6Rg37gOOJ-4MQMrfrVVZvA7XF4ZE
 
 NEWREACH_WEB_URL=https://182.92.80.103/
 easemob.message.url=http://182.92.111.7:80
