--- a/service/community-service/src/main/resources/application.properties
+++ b/service/community-service/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name= community-service
 spring.cloud.config.uri= http://localhost:8888
+debug=true
+logging.level.com.wisdom=DEBUG
